<resources>
    <string name="app_name">Fundacion Mutua De Propietarios</string>
    <string name="failure_server_error">Server Error</string>
    <string name="Retry">Reintentar</string>
    <string name="Cancel">Cancelar</string>
    <string name="generic_error_title">Upsss!</string>
    <string name="generic_error_body">Parece que tenemos problemas, estamos trabajando para solucionarlo. Por favor, vuelve a intentarlo más tarde.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_m_s">Ver más</string>
    <string name="zero">ZERO</string>
    <string name="barriers">BARRERAS</string>
    <string name="start_info">Tú app para medir la accesiblidad de los edificios de tu entorno</string>
    <string name="start">Comenzar</string>
    <string name="enter">Entrar</string>
    <string name="forgot_my_password">Olvidé mi contraseña</string>
    <string name="login_informative_text">¿No has estado aquí antes?</string>
    <string name="registry">Regístrate</string>
    <string name="email_required">EMAIL*</string>
    <string name="password_required">CONTRASEÑA*</string>
    <string name="password_required_repeat">REPETIR CONTRASEÑA*</string>
    <string name="send_mail">Enviar email</string>
    <string name="forgot_my_password_fragment_forgote_your_password">¿Olvidaste tú contraseña?</string>
    <string name="have_an_email">¡Tienes un email!</string>
    <string name="forgot_my_password_fragment_banner_one">Introduce tu e-mail y te enviaremos una clave para recuperarla</string>
    <string name="forgot_my_password_fragment_banner_two">Introduce la clave que te hemos enviado</string>
    <string name="code">Código</string>
    <string name="save_password">Guardar contraseña</string>
    <string name="choose_new_password">Elige tú nueva contraseña</string>
    <string name="forgot_my_password_fragment_banner_three">Recuerda que debe tener al menos 6 caracteres</string>
    <string name="registry_for_start">Regístrate para empezar</string>
    <string name="signin_code_banner_text">Introduce la clave que te hemos enviado</string>
    <string name="user_name_required">NOMBRE DE USUARIO*</string>
    <string name="save">Guardar</string>
    <string name="How_do_you_want_to_introduce">¿Cómo quieres presentarte?</string>
    <string name="introduce_banner">Así te verán los demás en el foro y en las mediciones que realices</string>
    <string name="name">NOMBRE</string>
    <string name="surname">PRIMER APELLIDO</string>
    <string name="second_surname">SEGUNDO APELLIDO</string>
    <string name="telephone">TELÉFONO</string>
    <string name="skip">Omitir</string>
    <string name="contact_signin_banner_text">Estos datos no los verán los demás usuarios</string>
    <string name="wellcome">¡Te damos \n la bienvenida!</string>
    <string name="wellcome_text">Aquí compartiremos las valoraciones de accesibilidad de los edificios que nos rodean. \n \n   Además de esto, ¿has llegado aquí a través de algún grupo? Si es así, es posible que te hayan dado un código de acceso.</string>
    <string name="have_a_code">Tengo un código</string>
    <string name="see_groups">Ver grupos</string>


    <string name="loremp_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis fringilla, ligula feugiat scelerisque lacinia, libero ipsum tincidunt augue, in posuere enim erat id libero. Duis ultricies orci vitae orci bibendum feugiat. Nunc malesuada, velit eu interdum efficitur, purus eros euismod ipsum, a ultrices massa diam vitae lectus. Aliquam sed tincidunt est. Proin sit amet risus tincidunt, commodo enim ac, euismod mauris. Etiam vel nisi lacinia, hendrerit sapien non, pulvinar tortor. Morbi sit amet orci id orci laoreet tristique in eu massa. Nunc vestibulum interdum nibh, quis pellentesque libero sagittis at. Aliquam cursus tincidunt aliquam. Etiam vulputate metus ut lacus congue dapibus. Sed gravida congue libero, vitae vulputate diam venenatis ac. Sed pulvinar gravida lacinia.</string>

    <!-- onBoarding -->
    <string name="onboarding_button_skip">Omitir</string>

    <string name="onboarding_button_next">Siguiente</string>
    <string name="onboarding_button_start">Comenzar</string>

    <string name="onboarding_title1"><![CDATA[<small>ESTAMOS</small><br><big><font color="#BD1242">JUNTOS</font></big></]]></string>
    <string name="onboarding_title2">Pide lo que necesites, contribuye con lo que puedas</string>
    <string name="onboarding_title3">Demanda ayuda virtual o presencial</string>
    <string name="onboarding_title4">Encontremos a tiempo los lugares de contagio</string>
    <string name="onboarding_title5">Recibe noticias contrastadas</string>

    <string name="onboarding_desc1">Porque aunque parezca que estemos encerrados, seguimos formando parte de una gran comunidad</string>
    <string name="onboarding_desc2">Ofrece y solicita la ayuda que necesites, para que creemos juntos la comunidad que queremos.</string>
    <string name="onboarding_desc3">Observa el mapa para ver qué personas necesitan ayuda cerca. Utiliza la red para contactar con las que están lejos.</string>
    <string name="onboarding_desc4">Los comercios también colaboran. Haz check in en los lugares con gran afluencia a los que vayas, y si alguien se contagia, todos seréis avisados.</string>
    <string name="onboarding_desc5">Te ofrecemos noticias contrastadas para evitar fake news.</string>

    <!--My profile-->
    <string name="profile_title">Mi perfil</string>
    <string name="profile_edit">Editar</string>
    <string name="profile_name">Montse Álvarez</string>
    <string name="profile_opinions">Ver 28 opiniones</string>
    <string name="profile_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</string>

    <!--My profile edit-->
    <string name="profile_edit_title">Editar perfil</string>
    <string name="profile_edit_save">Guardar</string>
    <string name="profile_edit_cancel">Cancelar</string>
    <string name="profile_edit_professional">Certificarme como profesional</string>
    <string name="profile_edit_private_data">Datos privados</string>
    <string name="profile_edit_change_pass">Cambiar contraseña</string>
    <string name="profile_edit_log_out">Log out</string>
    <string name="profile_edit_remove">Darme de baja</string>

    <!--certify profile -->
    <string name="certify_profile_title">Certificación \n profesional</string>
    <string name="certify_profile_header">¿Qué es la certificación profesional?</string>
    <string name="certify_profile_detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Eeiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
</string>
    <string name="certify_profile_detail1">Quiero certificarme en...</string>
    <string name="certify_profile_protocolo"> Protocolo para profesionales de la salud</string>
    <string name="certify_profile_protocolo_detail">    Necesitaremos que cumplas estos requisitos y nos envíes esto otro al email XXX
</string>







</resources>