<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clForgotPasswordBanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/shadowbg"
        android:elevation="15dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="@id/gl50h"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitleBanner"
            style="@style/text_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wellcome"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivBanner"
            style="@style/GlobalMargin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_wellcome_banner"
            app:layout_constraintBottom_toTopOf="@id/glClBanner70h"
            app:layout_constraintTop_toBottomOf="@id/tvTitleBanner" />

        <TextView
            android:id="@+id/tvBanner"
            style="@style/text_red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Ya foramas parte de la \n comunidad Zero Barreras"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/ivBanner"
            app:layout_constraintRight_toRightOf="@id/ivBanner"
            app:layout_constraintTop_toBottomOf="@id/ivBanner" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glClBanner70h"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".8" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/GlobalMargin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl50h">

        <TextView
            android:id="@+id/tvWellcome"
            style="@style/text_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/wellcome_text"
            app:layout_constraintBottom_toTopOf="@id/btnHaveACode"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHaveACode"
            style="@style/RedButtonOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/have_a_code"
            app:layout_constraintBottom_toTopOf="@id/btnSeeGroups"
            app:layout_constraintTop_toBottomOf="@id/tvWellcome" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSeeGroups"
            style="@style/RedButtonOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/see_groups"
            app:layout_constraintBottom_toTopOf="@id/btnStart"
            app:layout_constraintTop_toBottomOf="@id/btnHaveACode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            style="@style/RedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSeeGroups" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl50h"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

</androidx.constraintlayout.widget.ConstraintLayout>