<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clForgotPasswordBanner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:animateLayoutChanges="true"
            android:background="@drawable/shadowbg"
            android:elevation="15dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="@id/gl50h"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBanner"
                style="@style/GlobalMargin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_contact_banner"
                app:layout_constraintBottom_toTopOf="@id/glClBanner70h"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBanner"
                style="@style/text_gray"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contact_signin_banner_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/ivBanner"
                app:layout_constraintRight_toRightOf="@id/ivBanner"
                app:layout_constraintTop_toBottomOf="@id/ivBanner" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glClBanner70h"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".7" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/GlobalMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/gl50h">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/name"
                app:boxBackgroundColor="@color/transparent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/surname"
                app:boxBackgroundColor="@color/transparent"
                app:layout_constraintTop_toBottomOf="@id/tilName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSecondsurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/second_surname"
                app:boxBackgroundColor="@color/transparent"
                app:layout_constraintTop_toBottomOf="@id/tilSurname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSecondSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/telephone"
                app:boxBackgroundColor="@color/transparent"
                app:layout_constraintTop_toBottomOf="@id/tilSecondsurname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/swRememberPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilTelephone" />

            <TextView
                android:id="@+id/tvRememberPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/button_red"
                android:text="Autorizo a recibir comunicaciones de Fundación Mutua de Propietarios"
                app:layout_constraintBottom_toBottomOf="@id/swRememberPassword"
                app:layout_constraintLeft_toRightOf="@id/swRememberPassword"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/swRememberPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                style="@style/RedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@id/swRememberPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSkip"
                style="@style/RedButtonOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/skip"
                app:layout_constraintTop_toBottomOf="@id/btnSave" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl50h"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>