<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_wellcome"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/gl50h"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/GlobalMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl50h">

        <LinearLayout
            android:id="@+id/tvBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvInfo">

            <TextView
                android:id="@+id/tvZero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="@color/text_gray"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBarier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/barriers"
                android:textColor="@color/text_red"
                android:textSize="30dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/start_info"
            android:textColor="@color/text_gray"
            app:layout_constraintTop_toBottomOf="@id/tvBanner"
            app:layout_constraintBottom_toTopOf="@id/btnStart"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            style="@style/RedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/ivBottom"
            app:layout_constraintTop_toBottomOf="@id/tvInfo" />

        <ImageView
            android:id="@+id/ivBottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_fundacion_logo"
            app:layout_constraintTop_toBottomOf="@id/gl80h"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl80h"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".75"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl50h"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />
</androidx.constraintlayout.widget.ConstraintLayout>